--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3  # Update to use latest version (v3)
 
       - name: Set up Python
-        uses: actions/setup-python@v2  # Update to use latest version (v3)
+        uses: actions/setup-python@v2  # Update to use latest version (v3).
         with:
           python-version: '3.x'
 
